--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "prettier": "3.2.1"
   }
 }
